[package]
name = "arbnco-proxy"
version = "0.1.0"
authors = ["Humaid AlQassimi <git@humaidq.ae>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["blocking"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
serde_derive = "1.0.118"
passwords = "3.1.3"
confy = "0.4.0"
cached = "0.22.0"
